Issue #7557 - Update extension description
Also wrote down guidelines in CONTRIBUTING.md

--- a/extensions/container-image/container-image-s2i/runtime/pom.xml
+++ b/extensions/container-image/container-image-s2i/runtime/pom.xml
@@ -11,8 +11,8 @@
     </parent>
 
     <artifactId>quarkus-container-image-s2i</artifactId>
-    <name>Quarkus - Container - Image - S2i</name>
-    <description>Extension for building container images with s2i</description>
+    <name>Quarkus - Container - Image - S2I</name>
+    <description>Build container images of your application using OpenShift S2I</description>
 
 
     <build>
