--- a/extensions/jdbc/jdbc-h2/runtime/pom.xml
+++ b/extensions/jdbc/jdbc-h2/runtime/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>quarkus-jdbc-h2</artifactId>
     <name>Quarkus - JDBC - H2 - Runtime</name>
-    <description>H2 database connector</description>
+    <description>Connect to the H2 database via JDBC</description>
     <dependencies>
         <dependency>
             <groupId>com.h2database</groupId>
