--- a/extensions/amazon-lambda/runtime/pom.xml
+++ b/extensions/amazon-lambda/runtime/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>quarkus-amazon-lambda</artifactId>
     <name>Quarkus - Amazon Lambda - Runtime</name>
-    <description>AWS Lambda support</description>
+    <description>Write AWS Lambda functions</description>
 
     <dependencies>
         <dependency>
