--- a/extensions/azure-functions-http/runtime/pom.xml
+++ b/extensions/azure-functions-http/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-azure-functions-http</artifactId>
     <name>Quarkus - HTTP Azure Functions - Runtime</name>
-    <description>This package contains all Java interfaces and annotations to interact with Microsoft Azure functions runtime.</description>
+    <description>Write Microsoft Azure functions</description>
 
     <dependencies>
         <dependency>
