--- a/extensions/container-image/container-image-docker/runtime/pom.xml
+++ b/extensions/container-image/container-image-docker/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-container-image-docker</artifactId>
     <name>Quarkus - Container - Image - Docker</name>
-    <description>Extension for building container images with Docker</description>
+    <description>Build container images of your application using Docker</description>
 
 
     <build>
