--- a/extensions/container-image/container-image-jib/runtime/pom.xml
+++ b/extensions/container-image/container-image-jib/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-container-image-jib</artifactId>
     <name>Quarkus - Container - Image - Jib</name>
-    <description>Extension for building container images with Jib</description>
+    <description>Build container images of your application using Jib</description>
 
 
     <build>
