--- a/extensions/elytron-security/runtime/pom.xml
+++ b/extensions/elytron-security/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-elytron-security</artifactId>
     <name>Quarkus - Elytron Security - Runtime</name>
-    <description>Secure your services</description>
+    <description>Secure your services via Elytron</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
