--- a/extensions/jdbc/jdbc-postgresql/runtime/pom.xml
+++ b/extensions/jdbc/jdbc-postgresql/runtime/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>quarkus-jdbc-postgresql</artifactId>
     <name>Quarkus - JDBC - PostgreSQL - Runtime</name>
-    <description>PostgreSQL database connector</description>
+    <description>Connect to the PostgreSQL database via JDBC</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
