--- a/extensions/kafka-client/runtime/pom.xml
+++ b/extensions/kafka-client/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-kafka-client</artifactId>
     <name>Quarkus - Kafka - Client - Runtime</name>
-    <description>A client for Apache Kafka</description>
+    <description>Connect to Apache Kafka with its native API</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
