--- a/extensions/mongodb-client/runtime/pom.xml
+++ b/extensions/mongodb-client/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-mongodb-client</artifactId>
     <name>Quarkus - MongoDB Client - Runtime</name>
-    <description>An imperative and reactive client for MongoDB</description>
+    <description>Connect to MongoDB in either imperative or reactive style</description>
 
     <dependencies>
 
