--- a/extensions/reactive-streams-operators/smallrye-reactive-streams-operators/runtime/pom.xml
+++ b/extensions/reactive-streams-operators/smallrye-reactive-streams-operators/runtime/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>quarkus-smallrye-reactive-streams-operators</artifactId>
     <name>Quarkus - SmallRye Reactive Streams Operators - Runtime</name>
-    <description>Operators for Reactive Streams programming</description>
+    <description>Operators to write Reactive Streams based applications (Mutiny recommended instead)</description>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.microprofile.reactive-streams-operators</groupId>
