--- a/extensions/resteasy/runtime/pom.xml
+++ b/extensions/resteasy/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-resteasy</artifactId>
     <name>Quarkus - RESTEasy - Runtime</name>
-    <description>REST framework implementing JAX-RS and more</description>
+    <description>REST endpoint framework implementing JAX-RS and more</description>
 
     <dependencies>
         <dependency>
