--- a/extensions/smallrye-context-propagation/runtime/pom.xml
+++ b/extensions/smallrye-context-propagation/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-smallrye-context-propagation</artifactId>
     <name>Quarkus - SmallRye Context Propagation - Runtime</name>
-    <description>SmallRye Context Propagation</description>
+    <description>Propagate contexts between managed threads in reactive applications</description>
     <dependencies>
         <dependency>
             <groupId>io.smallrye</groupId>
