--- a/extensions/smallrye-reactive-messaging-kafka/runtime/pom.xml
+++ b/extensions/smallrye-reactive-messaging-kafka/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
     <name>Quarkus - SmallRye Reactive Messaging - Kafka - Runtime</name>
-    <description>Kafka reactive messaging connector</description>
+    <description>Connect to Kafka with Reactive Messaging</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
