--- a/extensions/smallrye-reactive-messaging/runtime/pom.xml
+++ b/extensions/smallrye-reactive-messaging/runtime/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>quarkus-smallrye-reactive-messaging</artifactId>
     <name>Quarkus - SmallRye Reactive Messaging - Runtime</name>
-    <description>Asynchronous messaging for Reactive Streams</description>
+    <description>Produce and consume messages and implement event driven and data streaming applications</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
