--- a/extensions/vertx-web/runtime/pom.xml
+++ b/extensions/vertx-web/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-vertx-web</artifactId>
     <name>Quarkus - Vert.x Web - Runtime</name>
-    <description>Vert.x Web</description>
+    <description>REST framework offering the route model to define non blocking endpoints</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
