--- a/extensions/vertx/runtime/pom.xml
+++ b/extensions/vertx/runtime/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-vertx</artifactId>
     <name>Quarkus - Vert.x - Runtime</name>
-    <description>Reactive application toolkit</description>
+    <description>Write reactive applications with the Vert.x API</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
