--- a/extensions/container-image/container-image-s2i/runtime/pom.xml
+++ b/extensions/container-image/container-image-s2i/runtime/pom.xml
@@ -14,6 +14,13 @@
     <name>Quarkus - Container - Image - S2I</name>
     <description>Build container images of your application using OpenShift S2I</description>
 
+    <dependencies>
+        <!-- We need the config to be on the runtime classpath because it's referenced from the config generation -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-kubernetes-client-internal</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
