--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
@@ -4,3 +4,4 @@ quarkus.kubernetes.labels.foo=bar
 quarkus.kubernetes.env-vars.my-env-var.value=SOMEVALUE
 quarkus.container-image.group=grp
 quarkus.container-image.registry=quay.io
+quarkus.kubernetes.expose=true
