--- a/integration-tests/kubernetes/standard/src/test/resources/openshift-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/openshift-with-application.properties
@@ -4,4 +4,5 @@ quarkus.openshift.name=test-it
 quarkus.openshift.labels.foo=bar
 quarkus.openshift.env-vars.my-env-var.value=SOMEVALUE
 quarkus.openshift.group=grp
+quarkus.openshift.expose=true
 quarkus.s2i.registry=quay.io
