--- a/extensions/oidc/deployment/src/test/resources/application-dev-mode.properties
+++ b/extensions/oidc/deployment/src/test/resources/application-dev-mode.properties
@@ -1,4 +1,5 @@
 quarkus.oidc.auth-server-url=${keycloak.url}/realms/devmode
+quarkus.oidc.tenant-enabled=false
 # This is a wrong client-id, will be updated to 'client-dev-mode' in the dev mode test
 quarkus.oidc.client-id=client-dev
 quarkus.oidc.application-type=web-app
